--- a/app/index-build.html
+++ b/app/index-build.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="build/build.min.css" />	
 	
 	<!-- external libraries -->	
-	<script src="js/lib/jquery.min.js"></script>
+	<script src="build/jquery.min.js"></script>
 	
 	<script src="build/build.min.js"></script>
 	<script src="build/config-custom.js"></script>
